//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
    Fixes:
        - Personal equipment names are localized again.
----------------------------------------------------------------------------------------------------------------------
Version: 2.13.0
Date: May 14th 2025
    Features:
        - Add support for exporting all building entities to one blueprint.
        - Support for new burner fuel inventory. Exported entities will now have burner fuel inventory slot set as filter (Configurable in preferences).
        - When Factorio updates Defines.lua, update it as automatically as possible.
    Fixes:
        - Fix issue when trying to export blueprint with modules (Key "count" was not found in property tree...)
        - Update Defines.lua for Factorio 2.0.49. (Yafc also still works with 2.0.47.)
    Internal Changes:
        - Upgrade Blueprint classes to support new logistic filter sections.
----------------------------------------------------------------------------------------------------------------------
Version: 2.12.0
Date: May 12th 2025
    Features:
        - When changing the language for Factorio objects, automatically switch to, or download, a font that can
          display that language.
        - All of YAFC can be translated, not just the strings that are used in Factorio.
    Fixes:
        - Prevent productivity bonuses from exceeding +300%, unless otherwise allowed by mods.
        - When loading duplicate research productivity effects, obey both of them, instead of failing.
        - Fixed a crash when item.weight == 0, related to ultracube.